# worldie

./: .gitignore  README.md  pyproject.toml
docs/: README.md  architecture.md  datasets.md  implementation-log.md  research-roadmap.md
docs/experiments/: 2026-03-15-acrobot.md  2026-03-15-baseline-v2.md  2026-03-15-baseline.md
src/worldie/: __init__.py  cli.py  collect.py  config.py  data.py  train.py  utils.py
src/worldie/models/: __init__.py  decoders.py  encoder.py  rssm.py  world_model.py
tests/: test_shapes.py
