[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "worldie"
version = "0.1.0"
description = "A documented starter project for learning world models."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "gymnasium[classic-control]>=1.1.0",
  "numpy>=2.0.0",
  "pillow>=11.0.0",
  "torch>=2.5.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

